@startuml
'https://plantuml.com/sequence-diagram

class BaseGame {
    # {abstract} getAbstractEnemyAircraft():AbstractEnemyAircraft
    # {abstract} controlDifficulty():void
    + creatBossEnemy():void
}


class EasyGame {
    # getAbstractEnemyAircraft():AbstractEnemyAircraft
    # controlDifficulty():void
    + creatBossEnemy():void
}

class NormalGame {
    - enemyHpAdd:int
    - enemySpeedAdd:int
    + NormalGame()
    # getAbstractEnemyAircraft():AbstractEnemyAircraft
    # controlDifficulty():void
}

class DifficultGame {
    - enemyHpAdd:int
    - enemySpeedAdd:int
    + DifficultGame()
    # getAbstractEnemyAircraft():AbstractEnemyAircraft
    # controlDifficulty():void
}

BaseGame <|-- EasyGame
BaseGame <|-- NormalGame
BaseGame <|-- DifficultGame


@enduml